--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build
-        run: ./build.sh
+        run: PATH="$PATH:~/go/bin" ./build.sh
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
