--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -15,13 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install System Dependencies
-        run: sudo apt-get install -y pandoc golang
-      - name: Install Go Dependencies
-        run: go install github.com/sclevine/yj/v5@v5.1.0
+        run: sudo apt-get install -y pandoc
+      - name: Install yj
+        run: sudo wget https://github.com/sclevine/yj/releases/download/v5.1.0/yj-linux-amd64 -o /usr/local/bin/yj
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build
-        run: PATH="$PATH:~/go/bin" ./build.sh
+        run: ./build.sh
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
