--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,7 +1,8 @@
 name: Build and deploy to Github pages
 on:
   push:
-    branches: [$default-branch]
+    branches:
+      - main
   workflow_dispatch:
 permissions:
   contents: read
