ah yes, unique ids

--- a/faqs/01_cs-ai.toml
+++ b/faqs/01_cs-ai.toml
@@ -988,7 +988,7 @@ en.title = ""
 
 [[sections.subsections.questions]]
 
-de.q = "Wie und was kann ich mir von der Schule anrechnen lassen?"
+de.q = "Wie und was kann ich mir im AI Bachelor von der Schule anrechnen lassen?"
 de.a = '''
 Wenn du eine HTL besucht hast, kannst du dir je nach HTL-Zweig verschiedene Fächer anrechnen lassen. [Hier](https://docs.google.com/spreadsheets/d/1iYPxAbFqygdOPOq6VNJfh-0Mq-Babmlerh3Qwi8fUls/edit#gid=0) findest du eine Tabelle mit den Anrechnungsmöglichkeiten für AI.
 
@@ -1106,7 +1106,7 @@ en.a = '''
 
 [[sections.subsections.questions]]
 
-de.q = "Gibt es eine Bachelorprüfung?"
+de.q = "Gibt es eine Bachelorprüfung im AI Bachelor?"
 de.a = '''
 In _§ 7 Abs. 2_ des AI-Curriculum steht: “_The Bachelor’s program in Artificial Intelligence is concluded by a Bachelor’s Examination. The Bachelor’s Examination consists of the successful completion of mandatory subjects [...]. In order to graduate, students must also receive a passing grade for their Bachelor’s thesis as well as for the free electives examinations._”
 
@@ -1149,7 +1149,7 @@ en.title = ""
 
 [[sections.subsections.questions]]
 
-de.q = "Wie und was kann ich mir von der Schule anrechnen lassen?"
+de.q = "Wie und was kann ich mir im Informatik Bachelor von der Schule anrechnen lassen?"
 de.a = '''
 Für einige Schulen gibt es bereits fertige Tabellen an Fächern, die man sich problemlos anrechnen lassen kann: [Tabelle für HAKs](https://informatik.jku.at/teaching/stuko/news/hak.html), [Tabelle für HTLs](https://informatik.jku.at/teaching/stuko/news/htl.html)
 
@@ -1205,7 +1205,7 @@ en.a = '''
 
 [[sections.subsections.questions]]
 
-de.q = "Gibt es eine Bachelorprüfung?"
+de.q = "Gibt es eine Bachelorprüfung im Informatik Bachelor?"
 de.a = '''
 In _§ 7 Abs. 2_ des Informatik-Curriculums steht: “_Das Bachelorstudium Informatik wird mit einer Bachelorprüfung abgeschlossen. Die Bachelorprüfung ist eine Gesamtprüfung, die in Form von Fachprüfungen über die Pflichtfächer [...] abzulegen ist. Für den Studienabschluss ist auch die positive Beurteilung der Bachelorarbeit sowie der freien Studienleistungen Voraussetzung._”
 
