Intro Text goes brrrr, but less efficiently

--- a/faqs/02_internationals.toml
+++ b/faqs/02_internationals.toml
@@ -1,39 +1,39 @@
 logo.src = "informatik_ai.png"
 logo.href = "https://oeh.jku.at/cs/"
 
-en.title = "FAQ Internationals"
+en.title = "FAQ: Internationals"
 
 en.intro = '''
-This document should serve as a collection of Frequently Asked Questions by Internationals studying (or planning to start studying) a subject that belongs to the StVs Informatik and AI.
+This document should serve as a collection of Frequently Asked Questions by Internationals studying (or planning to start studying) Computer Science or AI.
 
 Below you will find a list of questions and their answers. If you don’t find an answer to your question, check out some of the resources listed here. The JKU and the voluntary student union (ÖH) offer a lot of support for students so don’t despair, we’ll get this sorted out!
 
-## Questions about your study
+## Questions about your Study
 
 This document was created by members of the Student Unions for Computer Science and AI. We know a lot about our studies and can usually help you out with any issues regarding your curriculum, what subjects to pick, what a study is about and more.
 
-If you have any questions on that matter, feel free to check out our [study FAQ](../../cs-ai/en/), read the study guide for Artificial Intelligence [here](https://oeh.jku.at/studium/technik-und-naturwissenschaften/artificial-intelligence#c1569) and the one for Computer Science [here](https://oeh.jku.at/cs/resources), ask us and your fellow students via [Discord](https://discord.gg/wAek576) or contact us via email ([ai@oeh.jku.at](mailto:ai@oeh.jku.at) for AI or [informatik@oeh.jku.at](mailto:informatik@oeh.jku.at)) for Computer Science).
+If you have any questions on that matter, feel free to check out our [study FAQ](../../cs-ai/en/), read the study guide for Artificial Intelligence [here](https://oeh.jku.at/studium/technik-und-naturwissenschaften/artificial-intelligence#c1569) and the one for Computer Science [here](https://oeh.jku.at/cs/resources), ask us and your fellow students via [Discord](https://discord.gg/wAek576) or contact us via email ([ai@oeh.jku.at](mailto:ai@oeh.jku.at) for AI or [informatik@oeh.jku.at](mailto:informatik@oeh.jku.at) for Computer Science).
 
-## Questions about international topics
+## Resources on International Topics
 
 While we know a lot about our studies, we are not trained on more general topics such as admission - luckily, there are some university- and nation-wide teams you can contact that can give you some clearer assurances!
 
-[JKU Admission Office](https://www.jku.at/en/teaching-and-studies-organization/admissions-office/): This JKU office has the final say on all matters of admission and enrolment. They are the people who will decide if you can study here, so only they can give you binding answers for your specific circumstances. Unfortunately, it may sometimes take them quite a while to respond, so keep that in mind when contacting them. Calling can help accelerate the process.
+**[JKU Admission Office](https://www.jku.at/en/teaching-and-studies-organization/admissions-office/):** This JKU office has the final say on all matters of admission and enrolment. They are the people who will decide if you can study here, so only they can give you binding answers for your specific circumstances. Unfortunately, it may sometimes take them quite a while to respond, so keep that in mind when contacting them. Calling can help accelerate the process.
 
-[JKU International Welcome Center](https://www.jku.at/en/degree-programs/international-students/international-students/): This JKU office can provide you with many answers regarding organisational matters (such as visas, residence permits etc.) - they also have some great resources on their website so be sure to check them out.
+**[JKU International Welcome Center](https://www.jku.at/en/degree-programs/international-students/international-students/):** This JKU office can provide you with many answers regarding organisational matters (such as visas, residence permits etc.) - they also have some great resources on their website so be sure to check them out.
 You can also contact them via [Facebook](https://www.facebook.com/groups/447118703087585/) where you will find their [FAQ](https://www.facebook.com/groups/447118703087585/learning_content) which was partly implemented here, too - look into it as well.
 
-[ÖH JKU ReMI](https://oeh.jku.at/abschnitte/remi-referat-f%C3%BCr-migration-und-integration): The student union’s office for migration and integration is our contact point for all students coming to the JKU to pursue a degree. It offers guidance in several languages and can assist you with topics such as visas, tuition fees, supplementary exams etc.
+**[ÖH JKU ReMI](https://oeh.jku.at/abschnitte/remi-referat-f%C3%BCr-migration-und-integration):** The student union’s office for migration and integration is our contact point for all students coming to the JKU to pursue a degree. It offers guidance in several languages and can assist you with topics such as visas, tuition fees, supplementary exams etc.
 
-[ÖH JKU ReFI](https://oeh.jku.at/abschnitte/refi-esn): The student union’s office for international exchange students focuses on people coming to the JKU for their exchange semesters. They organise events and will help you get settled here.
+**[ÖH JKU ReFI](https://oeh.jku.at/abschnitte/refi-esn):** The student union’s office for international exchange students focuses on people coming to the JKU for their exchange semesters. They organise events and will help you get settled here.
 
-[ÖH BV Office for Foreign Students](https://www.oeh.ac.at/en/departments/department-for-foreign-students/): The national student union offers free legal counselling for international students. If you are fighting a visa case or similar, they might be a good resource to contact. Since they are responsible for all of Austria, their knowledge of JKU-specific circumstances is of course less extensive than the other offices.
+**[ÖH BV Office for Foreign Students](https://www.oeh.ac.at/en/departments/department-for-foreign-students/):** The national student union offers free legal counselling for international students. If you are fighting a visa case or similar, they might be a good resource to contact. Since they are responsible for all of Austria, their knowledge of JKU-specific circumstances is of course less extensive than the other offices.
 
-[JKU Examination and Recognition Service](https://www.jku.at/en/teaching-and-studies-organization/examinations-and-recognition-services/): This JKU office is responsible for accrediting courses, so if you have already studied something else before coming here, they can help you transfer your credits to your new studies.
+**[JKU Examination and Recognition Service](https://www.jku.at/en/teaching-and-studies-organization/examinations-and-recognition-services/):** This JKU office is responsible for accrediting courses, so if you have already studied something else before coming here, they can help you transfer your credits to your new studies.
 
-[ÖH JKU Sozialreferat](https://oeh.jku.at/sozialreferat): The ÖH Sozialreferat is a student union’s office that provides support on social issues such as inclusion and studying with a child. They also offer financial aid to JKU students according to a set of criteria and depending on the students’ personal situations.
+**[ÖH JKU Sozialreferat](https://oeh.jku.at/sozialreferat):** The ÖH Sozialreferat is a student union’s office that provides support on social issues such as inclusion and studying with a child. They also offer financial aid to JKU students according to a set of criteria and depending on the students’ personal situations.
 
-If you want to connect with some fellow students and ask about their experiences, head over to our Discord server by using this link: [https://discord.gg/wAek576](https://discord.gg/wAek576) - the channel #international-topics has many AI and CS students who are in a similar situation as you are and are happy to give advice.
+If you want to connect with some fellow students and ask about their experiences, head over to our **Discord Server** by using this link: [https://discord.gg/wAek576](https://discord.gg/wAek576) - the channel #international-topics has many AI and CS students who are in a similar situation as you are and are happy to give advice.
 
 ## This FAQ
 
