--- a/faqs/01_cs-ai.toml
+++ b/faqs/01_cs-ai.toml
@@ -360,7 +360,7 @@ The designation of Special Topics consists of a main title ("Special Topics:") a
 de.q = "Was sind freie Studienleistungen?"
 de.a = '''
 Jedes österreichische Uni-Studium muss “Freie Studienleistungen” beinhalten - sie sollen Studierenden die Möglichkeit geben, auch über ihr Fachgebiet hinaus Einblicke in die Wissenschaft zu erhalten. Die dafür vorgesehenen ECTS kannst du darum durch beliebige Fächer an einer beliebigen österreichischen Universität absolvieren, vom Sprach- bis zum Töpferkurs. Es ist natürlich auch möglich (wenngleich nicht unbedingt Ziel der Maßnahme), ein Informatik-Fach für die freien Studienleistungen zu nutzen.
-Viele [ehrenamtliche Dienste](https://www.jku.at/rektorat/vizerektorat-fuer-lehre-und-studierende/anrechnung-ehrenamtlicher-taetigkeit/) geben ebenfalls “Freie ECTS” - auf unserem [Discord-Server](https://discord.gg/wAek576) kannst du dich im `#free-electives` channel zu den besten Fächern austauschen.
+Viele [ehrenamtliche Dienste](https://www.jku.at/lift-c/lehren/lehre-mit-purpose/freiwilligenarbeit-im-sozialbereich/) geben ebenfalls “Freie ECTS” - auf unserem [Discord-Server](https://discord.gg/wAek576) kannst du dich im `#free-electives` channel zu den besten Fächern austauschen.
 
 Wenn du zwei Studien parallel studierst, kannst du außerdem Fächer des einen Studiums als Free Electives für das andere Studium verwenden (siehe auch [Regeln zur Anrechnung](#kann-ich-einen-kurs-fuer-mehrere-studiengaenge-nutzen-kann-ich-mir-einen-aehnlichen-kurs-anrechnen)) - kurz, du bist in der Wahl der Fächer wirklich vollkommen frei.
 Wenn du ein Fach an einer anderen Universität absolvieren möchtest, lies dir die Regeln der jeweiligen Uni zu “Mitbelegung” durch.
@@ -370,7 +370,7 @@ en.q = "What are Free Electives?"
 en.a = '''
 Every Austrian university degree program must include "Freie Studienleistungen" - they are intended to allow students to gain an insight into science beyond their subject area. You can therefore complete the ETCS provided for this purpose through any subject at any Austrian university, from language to pottery courses. It is of course also possible (although not necessarily the aim of the program) to use a computer science subject for the free credits.
 
-Many [voluntary work engagements](https://www.ulf-ooe.at/unsere-projekte/aktuelle-projekte-und-schwerpunkte/lev/lev-jku) (e.g. firefighters) also give "free ECTS" - you can exchange information on the best subjects in the `#free-electives` channel on our [Discord server](https://discord.gg/wAek576).
+Many [voluntary work engagements](https://www.jku.at/en/lift-c/lehren/lehre-mit-purpose/volunteering-in-the-social-sector/) (e.g. firefighters) also give "free ECTS" - you can exchange information on the best subjects in the `#free-electives` channel on our [Discord server](https://discord.gg/wAek576).
 
 If you are doing two degrees at the same time, you can also use subjects from one degree as free electives for the other (see also [rules on credit transfer](#can-i-use-a-course-for-two-different-degrees-can-i-accredit-a-similar-course)) - in short, you are completely free to choose your subjects.
 
