fix broken link

--- a/faqs/01_cs-ai.toml
+++ b/faqs/01_cs-ai.toml
@@ -473,7 +473,7 @@ Depending on your citizenship, you will also need to pay tuition fees: EU and EE
 
 Note that for some financial aids (e.g. Studienbeihilfe), the amount of tolerance semesters before funding is cut is lower.
 
-During the Bachelor’s, keep [Mindeststudienleistung](http://localhost:8000/cs-ai/en/#what-is-the-minimum-number-of-credits-mindeststudienleistung) in mind.
+During the Bachelor’s, keep [Mindeststudienleistung](#what-is-the-minimum-number-of-credits-mindeststudienleistung) in mind.
 '''
 
 [[sections.subsections.questions]]
